www/css/chat.css
/* ... */
.sender_ilise, .userList_ilise
{
	background-image: url("../img/tile_hearts.png");
	background-size: 32px;
}

.sender_goki, .userList_goki
{
	background-image: url("../img/tile_bug.png");
	background-size: 32px;
}

.sender_calponpon, .userList_calponpon
{
	background-image: url("../img/tile_crystal.png");
	background-size: 32px;
}

.sender_daniel_zhang24, .userList_daniel_zhang24
{
	background-image: url("../img/tile_fish.png");
	background-size: 32px;
}

.sender_Ren, .userList_Ren
{
	background-image: url("../img/tile_umbrella.png");
	background-size: 32px;
}

.sender_wang, .userList_wang
{
	background-image: url("../img/tile_yv.png");
	background-size: 32px;
}

.channel_nyanpals
{
	background-image: url("../img/tile_logo.png");
	background-size: 32px;
}

/* Animations */

#cloud-scroll {
width: 200px;
height: 200px;
background: url(clouds-full.png) repeat-y;

}
@keyframes backgroundScroll {
	from {background-position: 0 0;}
	to {background-position: -32px -64px;}
}

@keyframes scrollRight {
	from {background-position: 0 0;}
	to {background-position: 32px 0;}
}

@keyframes ilise {
	from {background-position: 0 0;}
	to {background-position: 96px 0;}
}

@keyframes Ren-chon {
	from {background-position: 0 0;}
	to {background-position: 100px -20px;}
}

@keyframes rainbow {
	  0% {color: #ff6060;}
	  9% {color: #ffC060;}
	 18% {color: #ffff60;}
	 27% {color: #C0ff60;}
	 36% {color: #60ff60;}
	 45% {color: #60ffC0;}
	 54% {color: #60ffff;}
	 63% {color: #60C0ff;}
	 72% {color: #6060ff;}
	 81% {color: #C060ff;}
	 90% {color: #ff60C0;}
	100% {color: #ff6060;}
}

@keyframes rainbowBackground {
  	  0% {background-color: #ff8080;}
	  9% {background-color: #ffC080;}
	 18% {background-color: #ffff80;}
	 27% {background-color: #C0ff80;}
	 36% {background-color: #80ff80;}
	 45% {background-color: #80ffC0;}
	 54% {background-color: #80ffff;}
	 63% {background-color: #80C0ff;}
	 72% {background-color: #8080ff;}
	 81% {background-color: #C080ff;}
	 90% {background-color: #ff80C0;}
	100% {background-color: #ff8080;}
}

/* Chat */

.chatMessageContainer:hover .chatSender, .chatMessage:hover
{
	background-color: #FFF !important;
	color: #000;
}

.chatSender, .userListEntryUsername
{
  display: inline-block;
  max-width: 100%;
  font-size: 0.8rem;
  word-break: break-all;
  word-wrap: break-word;
  padding: 0 4px;
}

#chatRooms
{
	height: 100%;
	width: 100%;
}

.chatRoom
{
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	overflow-y: auto;
}

.chatMessageContainer
{
	display: flex;
}

.chatSender
{
	white-space: nowrap;
	width: 100px;
	text-align: center;
	flex-shrink: 0;
}

.chatMessages
{
	flex-grow: 1;
}

.chatMessage, .systemMessage
{
	position: relative;
	padding: 2px;
	display: block;
	white-space: pre-wrap;
	font-size: 0.8rem;
}

span.sender
{
	position: sticky;
}

